# sequential

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  PATENTS  README.md  init.lua
dataset/: bucketbatchdataset.lua  bucketsorteddataset.lua  flatindexeddataset.lua  init.lua  sequencebatchdataset.lua  targetnextdataset.lua  truncateddatasetiterator.lua
rocks/: torchnet-sequential-scm-1.rockspec
test/: test.lua  test_bucketbatchdataset.lua  test_bucketsorteddataset.lua  test_flatindexeddataset.lua  test_sequencebatchdataset.lua  test_targetnextdataset.lua  test_truncateddatasetiterator.lua
