CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

SET(PKGNAME torchnet/sequential)

FILE(GLOB_RECURSE LUAFILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.lua")

FOREACH(FILE ${LUAFILES})
  GET_FILENAME_COMPONENT(dir ${FILE} PATH)
  INSTALL(FILES ${FILE} DESTINATION ${LUA_PATH}/${PKGNAME}/${dir})
ENDFOREACH()
